add rank field to webhook and update evaluation

--- a/.github/workflows/git-eval.yml
+++ b/.github/workflows/git-eval.yml
@@ -182,7 +182,8 @@ jobs:
             --arg user "${{ github.actor }}" \
             --argjson score "$TOTAL" \
             --arg feedback "$FEEDBACK" \
-            '{github_username: $user, score: $score, feedback: $feedback}')
+            --arg rank "S" \
+            '{github_username: $user, score: $score, feedback: $feedback, rank: $rank}')
 
           SIG=$(echo -n "$BODY" | openssl dgst -sha256 -hmac "$WEBHOOK_SECRET" | sed 's/^.* //')
 
