use external python script for JSON parsing

--- a/.github/workflows/git-eval.yml
+++ b/.github/workflows/git-eval.yml
@@ -53,6 +53,25 @@ jobs:
             echo "CI_EOF"
           } >> $GITHUB_OUTPUT
 
+      - name: Setup JSON parser
+        run: |
+          cat << 'PYEOF' > /tmp/parse_json.py
+          import sys, json
+          text = sys.stdin.read()
+          start = text.find('{')
+          if start >= 0:
+              depth = 0
+              for i in range(start, len(text)):
+                  if text[i] == '{': depth += 1
+                  elif text[i] == '}': depth -= 1
+                  if depth == 0:
+                      try:
+                          json.loads(text[start:i+1])
+                          print(text[start:i+1])
+                      except: pass
+                      break
+          PYEOF
+
       - name: Collect source code
         id: source
         run: |
@@ -122,22 +141,7 @@ jobs:
           LLM_TEXT=$(echo "$RESPONSE" | jq -r '.content[0].text // empty')
 
           if [ -n "$LLM_TEXT" ]; then
-            LLM_JSON=$(echo "$LLM_TEXT" | python3 -c "
-          import sys, json
-          text = sys.stdin.read()
-          start = text.find('{')
-          if start >= 0:
-              depth = 0
-              for i in range(start, len(text)):
-                  if text[i] == '{': depth += 1
-                  elif text[i] == '}': depth -= 1
-                  if depth == 0:
-                      try:
-                          json.loads(text[start:i+1])
-                          print(text[start:i+1])
-                      except: pass
-                      break
-          ")
+            LLM_JSON=$(echo "$LLM_TEXT" | python3 /tmp/parse_json.py)
             if [ -n "$LLM_JSON" ]; then
               TS=$(echo "$LLM_JSON" | jq -r '.tech_selection // 0')
               PM=$(echo "$LLM_JSON" | jq -r '.purpose_means // 0')
